ChangeLog for package XiMpLe

changes in version 0.10-4 (2022-10-30)
unreleased:
  - this release is under development
changed:
  - XMLNode(): you can now define attributes in the dots argument as well
    by using a named character string; the attrs argument can still be
    used as before, it just doesn't have a NULL default value any more

changes in version 0.10-3 (2020-09-19)
fixed:
  - *-package.R/.Rd: use macros like \packageDescription{}
  - pasteXMLTag(): fixed warning when tag contains only whitespace chars
added:
  - pasteXML(): new argument "tidy.omit" to define node names where "tidy"
    should not replace characters; by default <![CDATA[ ]]> nodes are omitted

changes in version 0.10-2 (2017-12-12)
fixed:
  - node<-: somehow sapply() in R-devel began to return lists where until now
    vectors were returned, which broke this method
changed:
  - consequently use USE.NAMES=FALSE in sapply to reduce memory overhead
  - replaced SWeave/PDF vignette with a version in RMarkdown/HTML

changes in version 0.10-1 (2017-04-10)
fixed:
  - XMLValue() didn't return values in "!value!" special child nodes
  - adjusted internal function XML.nodes() to work with R 3.3 (embedding S4
    objects in lists)
added:
  - new method validXML() for some basic validity checks
  - new class XiMpLe.validity to define valid child nodes and attributes
  - new function is.XiMpLe.validity()
  - new method XMLgenerators() for objects of class XiMpLe.validity
  - new tests for validity checks
  - XMLTree() (and hence objects of class XiMpLe.doc) now also accept a list
    of XiMpLe nodes with <?... ?> style tags as the "xml" slot
changed:
  - moved documentation of is.XiMpLe.node() and is.XiMpLe.doc() to the
    respective classes
  - pasteXML() gained support for tag names starting with "?" and ends them
    with "?>" instead of "/>"
  - parseXMLTree() now accepts more than one XML declaration at the beginning
    of a file