@@ -21,6 +21,7 @@ export(XMLTree)
 export(XMLValidity)
 export(XMLValue)
 export(XMLgenerators)
+export(gen_tag_functions)
 export(is.XiMpLe.doc)
 export(is.XiMpLe.node)
 export(is.XiMpLe.validity)
